# jetson_gpio

./: CMakeLists.txt  README.md
src/: main.cpp
